[package]
name = "voxel_render"
version = "0.1.0"
edition = "2021"

[dependencies]
winit = { version = "0.30.3", features = ["rwh_05"] }
env_logger = "0.11.3"
log = "0.4"
wgpu = "0.20.1"
pollster = "0.3"
bytemuck = { version = "1.12", features = [ "derive" ] }
image = { version = "0.25.1", default-features = false, features = [ "png", "jpeg" ]}
noise = "0.9.0"
