[package]
name = "voxel_render"
version = "0.1.0"
edition = "2021"

[dependencies]
bytemuck = { version = "1.12", features = [ "derive" ] }
cgmath = "0.18.0"
env_logger = "0.11.3"
image = { version = "0.25.1", default-features = false, features = [ "png", "jpeg" ]}
log = "0.4"
noise = "0.9.0"
pollster = "0.3"
wgpu = "29.0.3"
winit = { version = "0.30.12", features = ["rwh_05"] }
